--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" alt="Ready for a Quiz picture" type="image/jpeg" href="./src/assets/readyForAQuiz.jpg" />
+    <link rel="icon" type="image/jpeg" href="./src/assets/readyForAQuiz.jpg" />
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Quiz-Game</title>
